# dax-hoc

./: .gitignore  CLAUDE.md  DECISION_LOGIC.md  README.md  pyproject.toml
notebooks/: 1_read_data_feedback.ipynb  2_analyze_stock_reactions.ipynb  2_ensemble.ipynb  dry_run_interpreters.ipynb  dry_run_reseracher.ipynb  helpers.py  researcher.ipynb
notebooks/.ipynb_checkpoints/: 1_analyze_researcher-checkpoint.ipynb  read_data-checkpoint.ipynb
scripts/: run_daily_prep.py  run_news_poller.py  run_release_handler.py  run_t0_pipeline.py  run_t1_feedback.py  sync_earnings_calendar.py  sync_universe.py
src/: config.py
src/.ipynb_checkpoints/: db-checkpoint.py
src/db/: __init__.py  models.py
src/earnings/: calendar_sync.py  matcher.py  time_estimator.py  yf_calendar.py
src/ensemble/: announcement.py  decider.py  interpreter.py  pipeline.py
src/eqs/: calendar_client.py  client.py  news_poller.py
src/expectations/: pre_ann_prices.py  researcher.py
src/feedback/: analyst.py  price.py
src/llm/: base.py  claude.py  gemini.py  openai.py  registry.py
src/pipeline/: daily_prep.py  release_handler.py  t0_runner.py  t1_feedback.py
src/reaction/: analyzer.py
src/universe/: loader.py
tests/: test_earnings_event.py
